backend/infrastructure/kubernetes/blog-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-api-deployment
  labels:
    app: blog-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-api
  template:
    metadata:
      labels:
        app: blog-api
    spec:
      containers:
        - name: blog-api
          image: contentria/blog-api:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

          # ConfigMap과 Secret을 통째로 환경변수로 주입
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
